[gd_scene load_steps=4 format=3 uid="uid://l3wdojembkdo"]

[ext_resource type="Script" path="res://Main.gd" id="1_mrqa8"]
[ext_resource type="PackedScene" uid="uid://d2u3mkdq77yhn" path="res://Player.tscn" id="2_l6ae4"]

[sub_resource type="Curve2D" id="Curve2D_fuxg6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_mrqa8")

[node name="Player" parent="." instance=ExtResource("2_l6ae4")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fuxg6")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
